# specs_plugin_example

./: .gitignore  Cargo.toml  todo.txt
components/: Cargo.toml
components/src/: lib.rs
ecs_impl/: Cargo.toml
ecs_impl/src/: lib.rs
engine/: Cargo.toml
engine/src/: main.rs
framelimiter/: Cargo.toml
framelimiter/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
scripts/charr_dylib/: Cargo.toml
scripts/charr_dylib/src/: lib.rs
systems/charr/: Cargo.toml
systems/charr/src/: lib.rs
time/: Cargo.toml
time/src/: lib.rs
