[package]
name = "charr"
version = "0.1.0"
authors = ["runbmp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "*"
dynamic_reload = "*"
crossterm = "*"
components = { path = "../../components" }
ecs_impl = { path = "../../ecs_impl" }
plugin = { path = "../../plugin" }


